Changelog
=========

1.1.1 (unreleased)
------------------

- Ignore missing partials when seleting with "only".
  [jone]

- Fix error in metadata partial when owner is missing.
  [jone]

- Use UUID partial only on IUUIDAware objects.
  This allows us to dump the json of the Plone site.
  [jone]


1.1.0 (2015-10-11)
------------------

- Change file_callback signature to also include the key used in the dict.
  For dexterity content, the key is different than the fieldname because it
  is prefixed with the interface dottedname.

  - Old: ``file_callback(context, fieldname, data, filename, mimetype, jsondata)``
  - New: ``file_callback(context, key, fieldname, data, filename, mimetype, jsondata)``

  [jone]

- Dexterity: support exporting RichTextValue objects.
  [jone]


1.0.0 (2015-05-05)
------------------

- Initial implementation
  [maethu, jone]