@@ -5,12 +5,13 @@ from plone.app.textfield.value import RichTextValue
 class RichTextExtractor(PlainFieldExtractor):
 
     def extract(self, name, data, config):
+        key = self.key(config)
         storage = self.field.interface(self.context)
         value = getattr(storage, name)
         if isinstance(value, RichTextValue):
-            data.update({self.key: value.raw,
-                         self.key + ':mimeType': value.mimeType,
-                         self.key + ':outputMimeType': value.outputMimeType,
-                         self.key + ':encoding': value.encoding})
+            data.update({key: value.raw,
+                         key + ':mimeType': value.mimeType,
+                         key + ':outputMimeType': value.outputMimeType,
+                         key + ':encoding': value.encoding})
         else:
-            data[self.key] = value
+            data[key] = value
