@@ -4,6 +4,10 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
+- Add configuration option ``field_dottednames``
+  in order to use short fieldnames.
+  [jone]
+
 - Ignore missing partials when seleting with "only".
   [jone]
 
